Fix categories spacing

--- a/css/style.css
+++ b/css/style.css
@@ -139,9 +139,9 @@ button {
 
 .categories li {
   display: inline;
-  width: calc((100% / 3) - 2rem);
+  width: calc((100% / 3) - 3rem);
   text-transform: uppercase;
-  margin: 0 1rem;
+  margin: 0 1.5rem;
   font-size: 0.8rem;
 }
 
